project_openai_codex/overlay/prod/openai-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: ingress-warp
spec:
  ingressClassName: nginx
  rules:
  - host: openai.change_me.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: openai-client
            port:
              number: 8080
